# Budget-Manager

./: .gitignore  CMakeLists.txt  ReadMe.md  main.cpp
resources/: CMakeLists.txt  icons.qrc
src/: MainWindow.cpp  MainWindow.h
src/Database/: CMakeLists.txt  DbCategory.cpp  DbCategory.h  DbLedger.cpp  DbLedger.h  DbManagement.cpp  DbManagement.h  SqlQueryModelFactory.cpp  SqlQueryModelFactory.h
src/Layouts/: AddLedgerDialog.cpp  AddLedgerDialog.h  AnalysisWidget.cpp  AnalysisWidget.h  CategoryLayout.cpp  CategoryLayout.h  ChartsAnalysisLayout.cpp  ChartsAnalysisLayout.h  DeleteLedgerDialog.cpp  DeleteLedgerDialog.h  FilterLedgerDialog.cpp  FilterLedgerDialog.h  LedgerLayout.cpp  LedgerLayout.h  SummaryWidget.cpp  SummaryWidget.h
src/Widgets/: DollarSpinBox.cpp  DollarSpinBox.h  TransactionsDelegate.cpp  TransactionsDelegate.h
ui/: CMakeLists.txt  addledger.ui  analysislayout.ui  categorylayout.ui  deleteledger.ui  filterledgerdialog.ui  ledgerlayout.ui  mainwindow.ui  settings.ui  summarylayout.ui
